--- a/index.html
+++ b/index.html
@@ -7,5 +7,38 @@
     <script src="scripts/script.js" defer></script>
     <title>Calculator</title>
   </head>
-  <body></body>
+  <body>
+    <div class="calculator-container">
+      <div class="display"></div>
+      <div class="row">
+        <button>AC</button>
+        <button>+/-</button>
+        <button>%</button>
+        <button>÷</button>
+      </div>
+      <div class="row">
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>x</button>
+      </div>
+      <div class="row">
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>-</button>
+      </div>
+      <div class="row">
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>+</button>
+      </div>
+      <div class="row">
+        <button>0</button>
+        <button>.</button>
+        <button>=</button>
+      </div>
+    </div>
+  </body>
 </html>
