--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="calculator-container">
-      <div class="display">0</div>
+      <div class="display"></div>
       <div class="row">
         <button data-value="clear">AC</button>
         <button data-value="negate">+/-</button>
